<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/myStyle">
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonClear"
            android:text="@string/buttonClear"
            style="@style/myStyle"/>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonDel"
            android:text="@string/bbuttonDel"
            style="@style/myStyle"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonPercent"
            android:text="@string/buttonPercent"
            style="@style/myStyle"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonDec"
            android:text="@string/buttonDec"
            style="@style/myStyle"/>
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button7"
            android:text="@string/button7"
            style="@style/myStyle"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button8"
            android:text="@string/button8"
            style="@style/myStyle"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button9"
            android:text="@string/button9"
            style="@style/myStyle"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonX"
            android:text="@string/buttonX"
            style="@style/myStyle"/>
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button4"
            android:text="@string/botton4"
            style="@style/myStyle"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button5"
            android:text="@string/botton5"
            style="@style/myStyle"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button6"
            android:text="@string/botton6"
            style="@style/myStyle"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonMinus"
            android:text="@string/bottonMinus"
            style="@style/myStyle"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button1"
            android:text="@string/button1"
            style="@style/myStyle"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button2"
            android:text="@string/button2"
            style="@style/myStyle"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button3"
            android:text="@string/button3"
            style="@style/myStyle"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonPlus"
            android:text="@string/buttonPlus"
            style="@style/myStyle"/>

    </androidx.appcompat.widget.LinearLayoutCompat>


    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button0"
            android:text="@string/button0"
            android:layout_weight="0"
            style="@style/myStyle"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonPt"
            android:text="@string/buttonPt"
            android:layout_weight="0"
            style="@style/myStyle" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonEquals"
            android:text="@string/buttonEquals"
            android:layout_weight="20"
            style="@style/myStyle"  />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonSettings"
            android:text="@string/settings"
            android:layout_weight="20"
            style="@style/myStyle"  />



    </androidx.appcompat.widget.LinearLayoutCompat>


</androidx.appcompat.widget.LinearLayoutCompat>