<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    android:background="#052f61">


    <Button
        android:id="@+id/buttonClear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonClear"
        app:layout_constraintBottom_toTopOf="@id/buttonX"
        app:layout_constraintEnd_toStartOf="@id/buttonDel"
        app:layout_constraintStart_toStartOf="parent"
        android:onClick="clear"/>

    <Button
        android:id="@+id/buttonDel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bbuttonDel"
        app:layout_constraintBottom_toTopOf="@id/buttonX"
        app:layout_constraintEnd_toStartOf="@id/buttonPercent"
        app:layout_constraintStart_toEndOf="@id/buttonClear"
        android:onClick="delSimbol"/>

    <Button
        android:id="@+id/buttonPercent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonPercent"
        app:layout_constraintBottom_toTopOf="@id/buttonX"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@id/buttonDec"
        app:layout_constraintStart_toEndOf="@id/buttonDel"
        android:onClick="percent"/>

    <Button
        android:id="@+id/buttonDec"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonDec"
        app:layout_constraintBottom_toTopOf="@id/buttonX"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/buttonPercent"
        android:onClick="divide"/>

    <Button
        android:id="@+id/button7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button7"
        app:layout_constraintBottom_toTopOf="@id/buttonMinus"
        app:layout_constraintEnd_toStartOf="@id/button8"
        app:layout_constraintStart_toStartOf="parent"
        android:onClick="seven"/>

    <Button
        android:id="@+id/button8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button8"
        app:layout_constraintBottom_toTopOf="@id/buttonMinus"
        app:layout_constraintEnd_toStartOf="@id/button9"
        app:layout_constraintStart_toEndOf="@id/button7"
        android:onClick="eight"/>

    <Button
        android:id="@+id/button9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button9"
        app:layout_constraintBottom_toTopOf="@id/buttonMinus"
        app:layout_constraintEnd_toStartOf="@id/buttonX"
        app:layout_constraintStart_toEndOf="@id/button8"
        android:onClick="nine"/>

    <Button
        android:id="@+id/buttonX"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonX"
        app:layout_constraintBottom_toTopOf="@id/buttonMinus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/button9"
        android:onClick="incrs"/>

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/botton4"
        app:layout_constraintBottom_toTopOf="@id/button1"
        app:layout_constraintEnd_toStartOf="@id/button5"
        app:layout_constraintStart_toStartOf="parent"
        android:onClick="four"/>

    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/botton5"
        app:layout_constraintBottom_toTopOf="@id/button2"
        app:layout_constraintEnd_toStartOf="@id/button6"
        app:layout_constraintStart_toEndOf="@id/button4"
        android:onClick="five"/>

    <Button
        android:id="@+id/button6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/botton6"
        app:layout_constraintBottom_toTopOf="@id/button3"
        app:layout_constraintEnd_toStartOf="@id/buttonMinus"
        app:layout_constraintStart_toEndOf="@id/button5"
        android:onClick="six"/>

    <Button
        android:id="@+id/buttonMinus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bottonMinus"
        app:layout_constraintBottom_toTopOf="@id/button1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/button6"
        android:onClick="minus"/>

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button1"
        app:layout_constraintBottom_toTopOf="@id/buttonPt"
        app:layout_constraintEnd_toStartOf="@id/button2"
        app:layout_constraintStart_toStartOf="parent"
        android:onClick="one"/>

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button2"
        app:layout_constraintBottom_toTopOf="@id/buttonPt"
        app:layout_constraintEnd_toStartOf="@id/button3"
        app:layout_constraintStart_toEndOf="@id/button1"
        android:onClick="two"/>

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button3"
        app:layout_constraintBottom_toTopOf="@id/buttonPt"
        app:layout_constraintEnd_toStartOf="@id/buttonPlus"
        app:layout_constraintStart_toEndOf="@id/button2"
        android:onClick="three"/>

    <Button
        android:id="@+id/buttonPlus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonPlus"
        app:layout_constraintBottom_toTopOf="@id/buttonPt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/button3"
        android:onClick="plus"/>

    <Button
        android:id="@+id/button0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buttonPt"
        app:layout_constraintStart_toStartOf="parent"
        android:onClick="zero"/>

    <Button
        android:id="@+id/buttonPt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonPt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buttonEquals"
        app:layout_constraintStart_toEndOf="@+id/button0"
        android:onClick="point"/>

    <Button
        android:id="@+id/buttonEquals"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonEquals"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/buttonPt"
        app:layout_constraintTop_toBottomOf="@id/button1"
        android:onClick="equally"/>
</androidx.constraintlayout.widget.ConstraintLayout>